Implement EndGameActivity and go to end screen when winning the game

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name="com.dalydays.blog.lightsout.PuzzleBoardActivity"/>
+        <activity android:name="com.dalydays.blog.lightsout.EndGameActivity"/>
     </application>
 
 </manifest>
