--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.dalydays.blog.lightsout.StartScreenActivity">
+        <activity android:name=".StartScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.dalydays.blog.lightsout.PuzzleBoardActivity"/>
-        <activity android:name="com.dalydays.blog.lightsout.EndGameActivity"/>
+        <activity android:name=".PuzzleBoardActivity" />
+        <activity android:name=".EndGameActivity" />
     </application>
 
 </manifest>
